# ldjam55

./: .gitignore  .gitmodules  CMakeLists.txt  app.cpp  app.h  camera.h  main.cpp  props.h  renderer.h  sprite.h
assets/: brick.aseprite  eye.aseprite  eye.json  unicorn.aseprite  unicorn64.aseprite
assets/shaders/: bg.frag  bg.vert  color.frag  inst.vert  object.vert  texture.frag
